route/route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: harbor
      chart: harbor-0.1.1
      heritage: Tiller
      release: harbor
    name: harbor-harbor-registry
  spec:
    host: registry-blockchain-x5-vostok.tos.alfaintra.net
    port:
      targetPort: 5000
    to:
      kind: Service
      name: harbor-harbor-registry
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: harbor
      chart: harbor-0.1.1
      heritage: Tiller
      release: harbor
    name: harbor-harbor-ui
  spec:
    host: harbor-blockchain-x5-vostok.tos.alfaintra.net
    port:
      targetPort: 8080
    to:
      kind: Service
      name: harbor-harbor-ui
      weight: 100
    wildcardPolicy: None
kind: List
metadata: {}
