route/ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: harbor
  name: harbor
spec:
  host: harbor-blockchain-x5-vostok.tos.alfaintra.net
  port:
    targetPort: 8080
  to:
    kind: Service
    name: harbor-harbor-ui
